sudah ada footer

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="text-center text-white" style="background-color: #7952b3">
+
+      <!-- Copyright -->
+      <div
+           class="text-center p-3"
+           style="background-color: rgba(0, 0, 0, 0.2)"
+           >
+        © 2023 Copyright:
+        <a class="text-white" href="https://instagram.com/agil.core">Create by @agil.core</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
     <!-- jangan di ganggu -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
